# knowledge-reasoning-owlapi

./: .travis.yml  CMakeLists.txt  COPYRIGHT  Dockerfile  Doxyfile.in  README.md  manifest.xml
.github/workflows/: test.yml
modules/: owlapi-config.cmake.in  owlapi.cmake
src/: CMakeLists.txt  Exceptions.hpp  KnowledgeBase.cpp  KnowledgeBase.hpp  OWLApi.hpp  SharedPtr.hpp  Vocabulary.cpp  Vocabulary.hpp  owlapi.pc.in
src/csp/: ModelBound.cpp  ModelBound.hpp  ResourceMatch.cpp  ResourceMatch.hpp
src/db/: FileBackend.hpp
src/db/rdf/: Redland.cpp  Redland.hpp  SopranoDB.cpp  SopranoDB.hpp  Sparql.cpp  Sparql.hpp  SparqlInterface.cpp  SparqlInterface.hpp  Variable.cpp  Variable.hpp
src/io/: OWLIOBase.cpp  OWLIOBase.hpp  OWLOntologyIO.cpp  OWLOntologyIO.hpp  OWLOntologyReader.cpp  OWLOntologyReader.hpp  OWLReader.cpp  OWLReader.hpp  OWLWriter.cpp  OWLWriter.hpp  OntologyChange.hpp  RedlandReader.cpp  RedlandReader.hpp  RedlandWriter.cpp  RedlandWriter.hpp  XMLUtils.cpp  XMLUtils.hpp
src/io/changes/: AddEquivalentClasses.hpp  AddSubClassOfAnonymous.hpp
src/model/: ChangeApplied.hpp  HasAnnotationValue.hpp  HasAnnotations.cpp  HasAnnotations.hpp  HasFiller.hpp  HasIRI.hpp  HasOperands.hpp  HasProperty.hpp  HasSubject.hpp  IRI.cpp  IRI.hpp  NodeID.cpp  NodeID.hpp  OWLAllValuesFromRestriction.hpp  OWLAnnotation.hpp  OWLAnnotationAssertionAxiom.hpp  OWLAnnotationAxiom.hpp  OWLAnnotationObject.hpp  OWLAnnotationProperty.hpp  OWLAnnotationPropertyDomainAxiom.hpp  OWLAnnotationPropertyRangeAxiom.hpp  OWLAnnotationSubject.hpp  OWLAnnotationValue.cpp  OWLAnnotationValue.hpp  OWLAnonymousClassExpression.hpp  OWLAnonymousIndividual.hpp  OWLAsymmetricObjectPropertyAxiom.hpp  OWLAxiom.cpp  OWLAxiom.hpp  OWLAxiomAddVisitor.cpp  OWLAxiomAddVisitor.hpp  OWLAxiomChange.cpp  OWLAxiomChange.hpp  OWLAxiomRetractVisitor.cpp  OWLAxiomRetractVisitor.hpp  OWLAxiomVisitor.hpp  OWLBooleanClassExpression.hpp  OWLCardinalityRestriction.cpp  OWLCardinalityRestriction.hpp  OWLCardinalityRestrictionOps.cpp  (+155 more)
src/reasoner/factpp/: Types.cpp  Types.hpp
src/utils/: OWLApi.cpp  OWLEntityRemover.cpp  OWLEntityRemover.hpp  OntologyReaderMain.cpp
src/vocabularies/: OM.hpp  OWL.cpp  OWL.hpp  RDF.cpp  RDF.hpp  RDFS.hpp  XSD.cpp  XSD.hpp
test/: CMakeLists.txt  suite.cpp  test_CSP.cpp  test_Facet.cpp  test_IO.cpp  test_IRI.cpp  test_KnowledgeBase.cpp  test_OWLApi.cpp  test_Ontology.cpp  test_Sparql.cpp  test_utils.hpp
test/data/: om-schema-latest.owl  om-schema-v0.6.owl  om-schema-v0.9.owl  om-schema-v0.9.ttl  owlapi-test-with-custom.owl  test-annotations.ttl  test-data-restrictions-equivalence.ttl  test-object-cardinality.ttl  test-object-restrictions-components.ttl  test-object-restrictions-equivalence-1.owl  test-object-restrictions-equivalence.ttl  test-restrictions-modular-a.ttl  test-restrictions-modular-b.ttl  test-restrictions-modular-c.ttl  test-restrictions.ttl  test-turtle-value_types.owl  test-turtle-value_types.ttl
