find_package(Boost REQUIRED regex system filesystem program_options
    serialization)

rock_library(owlapi
    SOURCES
        io/OWLReader.cpp
        io/RedlandReader.cpp
        io/OWLIOBase.cpp
        io/OWLOntologyIO.cpp
        io/XMLUtils.cpp
        io/OWLOntologyReader.cpp
        io/RedlandWriter.cpp
        io/OWLWriter.cpp
        KnowledgeBase.cpp
        model/HasAnnotations.cpp
        model/IRI.cpp
        model/NodeID.cpp
        model/OWLAnnotationValue.cpp
        model/OWLAxiom.cpp
        model/OWLAxiomAddVisitor.cpp
        model/OWLAxiomChange.cpp
        model/OWLAxiomRetractVisitor.cpp
        model/OWLCardinalityRestriction.cpp
        model/OWLCardinalityRestrictionOps.cpp
        model/OWLClass.cpp
        model/OWLClassAssertionAxiom.cpp
        model/OWLClassExpression.cpp
        model/OWLDataCardinalityRestriction.cpp
        model/OWLDataOneOf.cpp
        model/OWLDataProperty.cpp
        model/OWLDataPropertyAssertionAxiom.cpp
        model/OWLDataRange.cpp
        model/OWLDataType.cpp
        model/OWLDataTypeRestriction.cpp
        model/OWLDeclarationAxiom.cpp
        model/OWLDisjointClassesAxiom.cpp
        model/OWLDisjointUnionAxiom.cpp
        model/OWLEntity.cpp
        model/OWLEquivalentClassesAxiom.cpp
        model/OWLFacet.cpp
        model/OWLFacetRestriction.cpp
        model/OWLLiteral.cpp
        model/OWLLiteralDouble.cpp
        model/OWLLiteralInteger.cpp
        model/OWLObject.cpp
        model/OWLObjectCardinalityRestriction.cpp
        model/OWLObjectPropertyAssertionAxiom.cpp
        model/OWLOntology.cpp
        model/OWLOntologyAsk.cpp
        model/OWLOntologyChange.cpp
        model/OWLOntologyTell.cpp
        model/OWLPropertyExpression.cpp
        model/OWLQualifiedRestriction.cpp
        model/OWLRestriction.cpp
        model/OWLSubClassOfAxiom.cpp
        model/QueryCache.cpp
        model/RemoveAxiom.cpp
        model/URI.cpp
        reasoner/factpp/Types.cpp
        utils/OWLApi.cpp
        vocabularies/OWL.cpp
        vocabularies/RDF.cpp
        vocabularies/XSD.cpp
        db/rdf/Redland.cpp
        db/rdf/Sparql.cpp
        db/rdf/SparqlInterface.cpp
        db/rdf/Variable.cpp
        db/FileBackend.cpp
    HEADERS
        db/FileBackend.hpp
        db/rdf/Redland.hpp
        db/rdf/Sparql.hpp
        db/rdf/SparqlInterface.hpp
        db/rdf/Variable.hpp
        Exceptions.hpp
        io/OntologyChange.hpp
        io/OWLIOBase.hpp
        io/OWLOntologyIO.hpp
        io/OWLOntologyReader.hpp
        io/OWLReader.hpp
        io/OWLWriter.hpp
        io/RedlandReader.hpp
        io/RedlandWriter.hpp
        io/XMLUtils.hpp
        io/changes/AddEquivalentClasses.hpp
        io/changes/AddSubClassOfAnonymous.hpp
        KnowledgeBase.hpp
        model/ChangeApplied.hpp
        model/HasAnnotations.hpp
        model/HasAnnotationValue.hpp
        model/HasFiller.hpp
        model/HasIRI.hpp
        model/HasOperands.hpp
        model/HasProperty.hpp
        model/HasSubject.hpp
        model/IRI.hpp
        model/NodeID.hpp
        model/OWLAnnotationAssertionAxiom.hpp
        model/OWLAnnotationAxiom.hpp
        model/OWLAnnotation.hpp
        model/OWLAnnotationObject.hpp
        model/OWLAnnotationPropertyDomainAxiom.hpp
        model/OWLAnnotationProperty.hpp
        model/OWLAnnotationPropertyRangeAxiom.hpp
        model/OWLAnnotationSubject.hpp
        model/OWLAnnotationValue.hpp
        model/OWLAnonymousClassExpression.hpp
        model/OWLAnonymousIndividual.hpp
        model/OWLAsymmetricObjectPropertyAxiom.hpp
        model/OWLAxiomAddVisitor.hpp
        model/OWLAxiomChange.hpp
        model/OWLAxiom.hpp
        model/OWLAxiomRetractVisitor.hpp
        model/OWLAxiomVisitor.hpp
        model/OWLBooleanClassExpression.hpp
        model/OWLCardinalityRestriction.hpp
        model/OWLCardinalityRestrictionOps.hpp
        model/OWLClassAssertionAxiom.hpp
        model/OWLClassAxiom.hpp
        model/OWLClassExpression.hpp
        model/OWLClass.hpp
        model/OWLDataAllValuesFrom.hpp
        model/OWLDataCardinalityRestriction.hpp
        model/OWLDataExactCardinality.hpp
        model/OWLDataHasValue.hpp
        model/OWLDataMaxCardinality.hpp
        model/OWLDataMinCardinality.hpp
        model/OWLDataOneOf.hpp
        model/OWLDataPropertyAssertionAxiom.hpp
        model/OWLDataPropertyAxiom.hpp
        model/OWLDataPropertyDomainAxiom.hpp
        model/OWLDataPropertyExpression.hpp
        model/OWLDataProperty.hpp
        model/OWLDataPropertyRangeAxiom.hpp
        model/OWLDataRange.hpp
        model/OWLDataRestriction.hpp
        model/OWLDataSomeValuesFrom.hpp
        model/OWLDataType.hpp
        model/OWLDataTypeRestriction.hpp
        model/OWLDeclarationAxiom.hpp
        model/OWLDisjointClassesAxiom.hpp
        model/OWLDisjointDataPropertiesAxiom.hpp
        model/OWLDisjointObjectPropertiesAxiom.hpp
        model/OWLDisjointUnionAxiom.hpp
        model/OWLEntity.hpp
        model/OWLEntityVisitor.hpp
        model/OWLEquivalentClassesAxiom.hpp
        model/OWLEquivalentDataPropertiesAxiom.hpp
        model/OWLEquivalentObjectPropertiesAxiom.hpp
        model/OWLFacet.hpp
        model/OWLFacetRestriction.hpp
        model/OWLFunctionalDataPropertyAxiom.hpp
        model/OWLFunctionalObjectPropertyAxiom.hpp
        model/OWLHasSelfRestriction.hpp
        model/OWLHasValueRestriction.hpp
        model/OWLIndividualAxiom.hpp
        model/OWLIndividual.hpp
        model/OWLInverseFunctionalObjectPropertyAxiom.hpp
        model/OWLInverseObjectPropertiesAxiom.hpp
        model/OWLInverseObjectProperty.hpp
        model/OWLIrreflexiveObjectPropertyAxiom.hpp
        model/OWLLiteralDouble.hpp
        model/OWLLiteral.hpp
        model/OWLLiteralInteger.hpp
        model/OWLLiteralNonNegativeInteger.hpp
        model/OWLLiteralNumeric.hpp
        model/OWLLogicalAxiom.hpp
        model/OWLLogicalEntity.hpp
        model/OWLNamedIndividual.hpp
        model/OWLNamedObject.hpp
        model/OWLNaryAxiom.hpp
        model/OWLNaryBooleanExpression.hpp
        model/OWLNaryClassAxiom.hpp
        model/OWLObjectAllValuesFrom.hpp
        model/OWLObjectCardinalityRestriction.hpp
        model/OWLObjectExactCardinality.hpp
        model/OWLObjectHasSelf.hpp
        model/OWLObjectHasValue.hpp
        model/OWLObject.hpp
        model/OWLObjectMaxCardinality.hpp
        model/OWLObjectMinCardinality.hpp
        model/OWLObjectPropertyAssertionAxiom.hpp
        model/OWLObjectPropertyAxiom.hpp
        model/OWLObjectPropertyCharacteristicAxiom.hpp
        model/OWLObjectPropertyDomainAxiom.hpp
        model/OWLObjectPropertyExpression.hpp
        model/OWLObjectProperty.hpp
        model/OWLObjectPropertyRangeAxiom.hpp
        model/OWLObjectRestriction.hpp
        model/OWLObjectSomeValuesFrom.hpp
        model/OWLOntologyAsk.hpp
        model/OWLOntologyChangeFilter.hpp
        model/OWLOntologyChange.hpp
        model/OWLOntologyChangeVisitor.hpp
        model/OWLOntology.hpp
        model/OWLOntologyTell.hpp
        model/OWLPropertyAssertionAxiom.hpp
        model/OWLPropertyAssertionObject.hpp
        model/OWLPropertyAxiom.hpp
        model/OWLPropertyDomainAxiom.hpp
        model/OWLPropertyExpression.hpp
        model/OWLProperty.hpp
        model/OWLPropertyRangeAxiom.hpp
        model/OWLPropertyRange.hpp
        model/OWLQualifiedRestriction.hpp
        model/OWLQuantifiedRestriction.hpp
        model/OWLQuantifiedDataRestriction.hpp
        model/OWLQuantifiedObjectRestriction.hpp
        model/OWLReasoner.hpp
        model/OWLReflexiveObjectPropertyAxiom.hpp
        model/OWLRestriction.hpp
        model/OWLSubAnnotationPropertyOfAxiom.hpp
        model/OWLSubClassOfAxiom.hpp
        model/OWLSubDataPropertyOfAxiom.hpp
        model/OWLSubObjectPropertyOfAxiom.hpp
        model/OWLSubPropertyAxiom.hpp
        model/OWLSymmetricObjectPropertyAxiom.hpp
        model/OWLTransitiveObjectPropertyAxiom.hpp
        model/OWLUnaryPropertyAxiom.hpp
        model/QueryCache.hpp
        model/RemoveAxiom.hpp
        model/URI.hpp
        OWLApi.hpp
        reasoner/factpp/AxiomVisitor.hpp
        reasoner/factpp/Types.hpp
        SharedPtr.hpp
        vocabularies/OWL.hpp
        vocabularies/RDF.hpp
        vocabularies/RDFS.hpp
        vocabularies/XSD.hpp
        Vocabulary.hpp
    DEPS_PKGCONFIG
        base-logging
        factpp
        liburiparser
        redland
        raptor2
        utilmm
        icu-i18n
        icu-io
        icu-uc
    DEPS
        Boost::program_options
        Boost::regex
        Boost::system
        Boost::filesystem
)

target_include_directories(owlapi PUBLIC ${Boost_INCLUDE_DIR})

rock_executable(owlapi-ontology_reader
    SOURCES utils/OntologyReaderMain.cpp
    DEPS owlapi)

rock_executable(owlapi-utils
    SOURCES utils/OWLApi.cpp
    DEPS owlapi)
